--- a/src/App.css
+++ b/src/App.css
@@ -12,11 +12,6 @@
   color: #61dafb;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.graph-container {
+  margin-top: 60px;
 }
