chore: title, favicon

--- a/src/App.css
+++ b/src/App.css
@@ -15,3 +15,16 @@
 .graph-container {
   margin-top: 60px;
 }
+
+.selection-container {
+  margin-top: 20px;
+  display: flex;
+  justify-content: center;
+  gap: 20px;
+}
+
+.selector-title {
+  color: gray;
+  font-size: 14px;
+  margin-bottom: 8px;
+}
